FIX: Habpanel filter finally working with 3.1.